2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* configure.in: Add pango pkg-config check.
	* pango/Layout.custom: Updated custom code to new opaque LayoutLine.
	* pango/LayoutLine.custom: Properties for LayoutLine struct fields.
	* pango/Makefile.am:
	* pango/Pango.metadata: Make LayoutLine opaque [Fixes #59666].
	* pango/glue/.cvsignore:
	* pango/glue/Makefile.am:
	* pango/glue/layoutline.c: glue for the LayoutLine struct fields.
	* pango/glue/makefile.win32:
	* pango/glue/win32dll.c:

2004-06-07  Todd Berman  <tberman@sevenl.net>

	* gtk/Widget.custom: expose some easy bool properties for checking
	certain WidgetFlags. Make Allocation a settable property.
	* gtk/glue/widget.c: bit of glue to make Allocation settable.
	* gdk/Window.custom: expose UserData as a usable IntPtr property.
	* gdk/Gdk.metadata: hide old GetUserData/SetUserData methods.
	* doc/*: ran the updater.

2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gtk/Widget.custom: Add FocusLineWidth property.
	* gtk/glue/widget.c: (gtksharp_gtk_widget_set_flags),
	(gtksharp_gtk_widget_style_get_int): glue for getting an integer style
	property.

2004-06-07  John Luke  <jluke@cfl.rr.com>
 
 	* doc/Makefile.am: install the docs if monodoc is there
 
2004-06-07  Peter Williams  <peter@newton.cx>

	* configure.in (MONODOC_REQUIRED_VERSION): Fix missing 'test' in
	shell if statement.

2004-06-04  Todd Berman  <tberman@sevenl.net>

	* glib/Object.cs: ConnectDefaultHandlers needs to look at public api
	as well	for virtual methods.
	* gtk/CellRenderer.custom:
	* gtk/Container.custom:
	* gnome/CanvasItem.custom: Add DefaultSignalHandler to remove the need
	for the static ctor.

2004-06-04  Todd Berman  <tberman@sevenl.net>

	* gnome/CanvasItem.custom: Changed from OnXXX vmethods to XXX vmethods
	* gnome/CanvasProxy.cs: removed, unused code
	* gnome/GtkSharp.BoundsHandler.cs: removed
	* gnome/GtkSharp.DrawHandler.cs: removed
	* gnome/GtkSharp.PointHandler.cs: removed