@@ -1,3 +1,8 @@
+2004-06-07  Mike Kestner  <mkestner@ximian.com>
+
+	* */Makefile.am : s|--unsafe|/unsafe to remove a mcs-ism that jluke
+	exposed in his cygwin build patch.
+
 2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* configure.in: Add pango pkg-config check.
